@@ -1,3 +1,10 @@
+Wed Jun 11 18:36:32 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Workspace_Generators.cpp:
+
+          Bug fix where the auto-generated workspace was not building
+          the event types used by the implemenations.
+
 Wed Jun 11 15:06:55 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/paradigms/PICML/be/CAPI/CAPI_Ctx.h:
